--- a/public/index.html
+++ b/public/index.html
@@ -40,4 +40,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script>
+    
+</script>
 </html>
